--- a/404.html
+++ b/404.html
@@ -1,9 +1,13 @@
 <!doctype html>
 <html>
-<head>
+<head><base href="/gurpsy-mc-gurps-face/">
+ <script type="text/javascript">
+   var newBase = document.createElement("base");
+   newBase.setAttribute("href", document.location.hostname);
+   document.getElementsByTagName("head")[0].appendChild(newBase);
+  </script>
   <meta charset="utf-8">
   <title>GurpsyMcGurpsFace</title>
-  <base href="/gurpsy-mc-gurps-face/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
