Adding component scan to initialization

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <gurpsy-root>Loading...</gurpsy-root>
+  <gurpsy-root>Executing component scan...</gurpsy-root>
 </body>
 </html>
