Added some loader stuff, resolves issue #26

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,32 @@
   <meta charset="utf-8">
   <title>GurpsyMcGurpsFace</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="gurpsy-loader.css" rel="stylesheet">
 </head>
 <body>
-  <gurpsy-root>Executing component scan...</gurpsy-root>
+<gurpsy-root>
+  <div class="loader">
+    <div class="sk-circle">
+      <div class="sk-circle1 sk-child"></div>
+      <div class="sk-circle2 sk-child"></div>
+      <div class="sk-circle3 sk-child"></div>
+      <div class="sk-circle4 sk-child"></div>
+      <div class="sk-circle5 sk-child"></div>
+      <div class="sk-circle6 sk-child"></div>
+      <div class="sk-circle7 sk-child"></div>
+      <div class="sk-circle8 sk-child"></div>
+      <div class="sk-circle9 sk-child"></div>
+      <div class="sk-circle10 sk-child"></div>
+      <div class="sk-circle11 sk-child"></div>
+      <div class="sk-circle12 sk-child"></div>
+    </div>
+    Loading GurpsyMcGurpsFace...
+  </div>
+</gurpsy-root>
 </body>
+<script src="gurpsy-loader.js" rel="script"/>
 </html>
