Moving the js to a specific folder

--- a/src/index.html
+++ b/src/index.html
@@ -31,5 +31,5 @@
   </div>
 </gurpsy-root>
 </body>
-<script src="gurpsy-loader.js" rel="script"/>
+<script src="scripts/gurpsy-loader.js" rel="script"/>
 </html>
