Fixed wrong order of javascript loading

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,6 @@
     Loading GurpsyMcGurpsFace...
   </div>
 </gurpsy-root>
+<!--<script src="scripts/gurpsy-loader.js" rel="script"/>-->
 </body>
-<script src="scripts/gurpsy-loader.js" rel="script"/>
 </html>
